fix bugs: * content scroll * fix delete button visiblity during editing folder * visual fix of reorder control

--- a/src/shared/ui/MainLayout/MainLayout.module.scss
+++ b/src/shared/ui/MainLayout/MainLayout.module.scss
@@ -13,6 +13,7 @@
 
 .content {
   flex: 1;
+  overflow: auto;
 }
 
 .version {
